@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.82 $) $Date: 2007/04/12 20:06:25 $
+ @(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.83 $) $Date: 2007/05/03 22:26:45 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/04/12 20:06:25 $ by $Author: brian $
+ Last Modified $Date: 2007/05/03 22:26:45 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: inet.c,v $
+ Revision 0.9.2.83  2007/05/03 22:26:45  brian
+ - final preloading and buffer sizing
+
  Revision 0.9.2.82  2007/04/12 20:06:25  brian
  - changes from performance testing and misc bug fixes
 
@@ -124,10 +127,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.82 $) $Date: 2007/04/12 20:06:25 $"
+#ident "@(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.83 $) $Date: 2007/05/03 22:26:45 $"
 
 static char const ident[] =
-    "$RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.82 $) $Date: 2007/04/12 20:06:25 $";
+    "$RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.83 $) $Date: 2007/05/03 22:26:45 $";
 
 /*
    This driver provides the functionality of IP (Internet Protocol) over a connectionless network
@@ -615,7 +618,7 @@ tcp_set_skb_tso_factor(struct sk_buff *skb, unsigned int mss_std)
 #define SS__DESCRIP	"UNIX SYSTEM V RELEASE 4.2 FAST STREAMS FOR LINUX"
 #define SS__EXTRA	"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
 #define SS__COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
-#define SS__REVISION	"OpenSS7 $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.82 $) $Date: 2007/04/12 20:06:25 $"
+#define SS__REVISION	"OpenSS7 $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.83 $) $Date: 2007/05/03 22:26:45 $"
 #define SS__DEVICE	"SVR 4.2 STREAMS INET Drivers (NET4)"
 #define SS__CONTACT	"Brian Bidulock <bidulock@openss7.org>"
 #define SS__LICENSE	"GPL"
