@@ -1,5 +1,8 @@
 2007-05-03  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/drivers/inet.c: final preloading and buffer sizing
+	* src/drivers/udp.c: final preloading and buffer sizing
+
 	* src/drivers/tl.c: added transport loopback driver
 
 	* doc/papers/Makefile: added performance results paper
